--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li>Street Fighter 6</li>
             <li>Skullgirls</li>
         </ul>
+
+    <h3>Check out upcoming tournaments on our <a href="./Schedule/Main Schedule.html">Schedule!</a> </h3>
     
     <h3>Submit your application to <a href="./Website documents/tournament entry.html">join!</a></h3>
 
@@ -23,3 +25,4 @@
         <ul>
             <li><a href="https://www.twitch.tv/autobotro">Twitch</a></li>
         </ul>
+</main>
