link to guilty gear on main navigation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
                     <div id="intro-section">
                         <ul id="list-of-games">
-                            <li class="games">Guilty Gear Strive</li>
+                            <li class="games"><a href="./Game Pages/Boiler Plate Game Page.html">Guilty Gear Strive</a></li>
                             <li class="games">Street Fighter 6</li>
                             <li class="games">Skullgirls</li>
                         </ul>
